--- a/index.html
+++ b/index.html
@@ -2,11 +2,43 @@
 <html lang="cs">
 <head>
   <meta charset="UTF-8">
-  <title>Moje stránka</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Dan Eisner – Osobní web</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Ahoj světe!</h1>
-  <p>Moje první stránka přes GitHub Pages a vlastní doménu 🚀</p>
+  <header>
+    <h1>Dan Eisner</h1>
+    <p>Student SPŠE Pardubice | Informační technologie – Hardware a sítě</p>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>O mně</h2>
+      <p>Jsem 18ti letý student SPŠE Pardubice, obor Informační technologie se zaměřením na hardware a sítě. Mám certifikovanou úroveň angličtiny C1 a zajímám se o technologie, obchodování a osobní rozvoj.</p>
+    </section>
+
+    <section id="interests">
+      <h2>Zájmy</h2>
+      <ul>
+        <li>💹 Začínající trader – učím se obchodovat a chápat finanční trhy</li>
+        <li>🎮 Hráč League of Legends – strategie, týmová spolupráce a reflexy</li>
+        <li>💪 Osobní rozvoj – psychický i fyzický</li>
+        <li>🏋️‍♂️ Fitness – pravidelně chodím do posilovny</li>
+        <li>📚 Neustálé vzdělávání – sleduji knihy, podcasty a kurzy</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Kontakt</h2>
+      <p>Chceš se spojit? Napiš mi na: <a href="mailto:dan.eisner@email.cz">dan.eisner@email.cz</a></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 Dan Eisner. Všechna práva vyhrazena.</p>
+  </footer>
 </body>
 </html>
+
 
