--- a/index.html
+++ b/index.html
@@ -1,106 +1,113 @@
-import { motion } from 'framer-motion';
-return (
-<div className="min-h-screen bg-gradient-to-br from-slate-900 via-slate-800 to-slate-900 text-white font-sans">
-{/* Hero section */}
-<section className="flex flex-col justify-center items-center text-center h-screen px-4">
-<motion.h1
-initial={{ opacity: 0, y: -40 }}
-animate={{ opacity: 1, y: 0 }}
-transition={{ duration: 1 }}
-className="text-5xl md:text-6xl font-bold mb-4 bg-gradient-to-r from-cyan-400 to-blue-500 bg-clip-text text-transparent"
->
-Dan Eisner
-</motion.h1>
-<motion.p
-initial={{ opacity: 0, y: 30 }}
-animate={{ opacity: 1, y: 0 }}
-transition={{ duration: 1, delay: 0.3 }}
-className="text-lg md:text-xl text-slate-300 max-w-2xl"
->
-18letý student informačních technologií na SPŠE Pardubice — specializace Hardware a Sítě.
-C1 Angličtina, budoucí student FIT ČVUT (kyberbezpečnost) a trader s vášní pro seberozvoj.
-</motion.p>
-<motion.div
-initial={{ opacity: 0 }}
-animate={{ opacity: 1 }}
-transition={{ delay: 1 }}
-className="mt-10 flex gap-4"
->
-<a href="mailto:dan.eisner@example.com" className="p-3 bg-slate-700 rounded-full hover:bg-slate-600 transition">
-<Mail className="w-5 h-5" />
-</a>
-<a href="https://github.com" className="p-3 bg-slate-700 rounded-full hover:bg-slate-600 transition">
-<Github className="w-5 h-5" />
-</a>
-</motion.div>
-</section>
+<!doctype html>
+<html lang="cs">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Dan Eisner — Portfolio</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
+  <style>
+    :root{
+      --bg1:#0f1724; --bg2:#0b1220;
+      --accent1:#06b6d4; --accent2:#7c3aed;
+    }
+    *{box-sizing:border-box}
+    body{margin:0;font-family:'Poppins',sans-serif;background:linear-gradient(135deg,var(--bg1),var(--bg2));color:#e6eef8}
+    .container{max-width:1000px;margin:0 auto;padding:48px 20px}
+    .hero{display:flex;align-items:center;gap:28px;padding:48px;border-radius:16px;background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);box-shadow:0 10px 30px rgba(2,6,23,0.6)}
+    .avatar{width:110px;height:110px;border-radius:18px;display:flex;align-items:center;justify-content:center;background:linear-gradient(135deg,var(--accent1),var(--accent2));font-size:40px;font-weight:700;animation:float 4s ease-in-out infinite}
+    @keyframes float{0%{transform:translateY(0)}50%{transform:translateY(-8px)}100%{transform:translateY(0)}}
+    .h1{font-size:34px;margin:0;background:linear-gradient(90deg,var(--accent1),#60a5fa);-webkit-background-clip:text;background-clip:text;color:transparent}
+    .lead{color:#cbd5e1;margin-top:6px}
+    .badges{display:flex;gap:8px;margin-top:12px}
+    .badge{padding:6px 10px;border-radius:999px;background:rgba(255,255,255,0.03);font-weight:600;font-size:13px;color:#c7d2fe}
+    .section{margin-top:36px;padding:28px;border-radius:12px;background:rgba(255,255,255,0.02);backdrop-filter:blur(6px);opacity:0;transform:translateY(12px);transition:all 500ms cubic-bezier(.2,.9,.2,1)}
+    .section.visible{opacity:1;transform:none}
+    .grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(220px,1fr));gap:18px;margin-top:18px}
+    .card{padding:18px;border-radius:10px;background:linear-gradient(180deg,rgba(255,255,255,0.01),transparent);box-shadow:0 6px 18px rgba(2,6,23,0.5);transition:transform 220ms,box-shadow 220ms}
+    .card:hover{transform:translateY(-6px);box-shadow:0 18px 40px rgba(2,6,23,0.6)}
+    .icon{width:44px;height:44px;border-radius:8px;display:inline-flex;align-items:center;justify-content:center;margin-bottom:8px;background:rgba(255,255,255,0.02)}
+    .footer{opacity:0.7;text-align:center;margin-top:28px;font-size:13px;color:#94a3b8}
+    @media (max-width:640px){.hero{flex-direction:column;text-align:center}.avatar{width:96px;height:96px;font-size:32px}.h1{font-size:28px}}
+    .links{display:flex;gap:10px;margin-top:12px}
+    .linkbtn{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:10px;background:linear-gradient(90deg,rgba(255,255,255,0.03),transparent);text-decoration:none;color:inherit;border:1px solid rgba(255,255,255,0.03);font-weight:600}
+    .small{font-size:13px;color:#94a3b8}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <header class="hero">
+      <div class="avatar">DE</div>
+      <div>
+        <h1 class="h1">Dan Eisner — student IT (Hardware & Sítě)</h1>
+        <p class="lead">18letý student na SPŠE Pardubice. C1 v angličtině. Chci studovat kyberbezpečnost na FIT ČVUT v Praze. Trading a seberozvoj jsou moje vášeň.</p>
+        <div class="badges">
+          <div class="badge">C1 Angličtina</div>
+          <div class="badge">Kyberbezpečnost</div>
+          <div class="badge">Trading</div>
+        </div>
+        <div class="links">
+          <a class="linkbtn" href="mailto:dan.eisner@example.com">✉️ Kontakt</a>
+          <a class="linkbtn" href="#">🐱 GitHub</a>
+        </div>
+      </div>
+    </header>
 
+    <section class="section" id="about">
+      <h2>O mě</h2>
+      <p class="small">Bydlím v Pardubicích a studuju SPŠE — Hardware a Sítě. Angličtina C1. Chci se věnovat kyberbezpečnosti. Ve volném čase fitness, seberozvoj a hraju League of Legends.</p>
+    </section>
 
-{/* About section */}
-<section className="max-w-4xl mx-auto py-20 px-6">
-<motion.h2
-initial={{ opacity: 0, y: 40 }}
-whileInView={{ opacity: 1, y: 0 }}
-transition={{ duration: 0.6 }}
-className="text-3xl font-bold mb-8 text-center"
->
-O mně
-</motion.h2>
+    <section class="section" id="skills">
+      <h2>Skills & zájmy</h2>
+      <div class="grid">
+        <div class="card">
+          <div class="icon">🛡️</div>
+          <strong>Kyberbezpečnost</strong>
+          <p class="small">Základy sítí, etické hackingové myšlení, firewall & základní penetrační testování.</p>
+        </div>
+        <div class="card">
+          <div class="icon">💻</div>
+          <strong>Hardware & Sítě</strong>
+          <p class="small">Montáž PC, konfigurace routerů/switchů, troubleshooting.</p>
+        </div>
+        <div class="card">
+          <div class="icon">📈</div>
+          <strong>Trading</strong>
+          <p class="small">Analytika, disciplína, technická strategie (BTC/ETH).</p>
+        </div>
+        <div class="card">
+          <div class="icon">🏋️</div>
+          <strong>Fitness</strong>
+          <p class="small">Pravidelný trénink pro výkon a zdraví.</p>
+        </div>
+      </div>
+    </section>
 
+    <section class="section" id="contact">
+      <h2>Kontakt</h2>
+      <p class="small">Email: <a href="mailto:dan.eisner@example.com">dan.eisner@example.com</a></p>
+    </section>
 
-<motion.p
-initial={{ opacity: 0 }}
-whileInView={{ opacity: 1 }}
-transition={{ duration: 0.6 }}
-className="text-lg text-slate-300 leading-relaxed text-center"
->
-Jsem student informačních technologií z Pardubic. Baví mě hardware, sítě a především kybernetická bezpečnost.
-Mým cílem je studovat na FIT ČVUT a posunout se směrem k etickému hackingu a digitální bezpečnosti.
-Kromě technologií mě zajímá trading a seberozvoj – psychický i fyzický. Rád trávím čas ve fitku a občas si zahraju League of Legends.
-</motion.p>
-</section>
+    <div class="footer">© <span id="year"></span> Dan Eisner — vytvořeno rychle a hezky</div>
+  </div>
 
+  <script>
+    document.getElementById('year').textContent = new Date().getFullYear();
 
-{/* Skills section */}
-<section className="bg-slate-800/40 py-20 px-6">
-<motion.h2
-initial={{ opacity: 0, y: 40 }}
-whileInView={{ opacity: 1, y: 0 }}
-transition={{ duration: 0.6 }}
-className="text-3xl font-bold mb-12 text-center"
->
-Co mě baví a čemu se věnuju
-</motion.h2>
+    // reveal on scroll
+    const obs = new IntersectionObserver((entries) => {
+      entries.forEach(e => { if (e.isIntersecting) e.target.classList.add('visible'); });
+    }, { threshold: 0.15 });
+    document.querySelectorAll('.section').forEach(s => obs.observe(s));
 
-
-<div className="grid md:grid-cols-3 gap-8 max-w-5xl mx-auto">
-{[
-{ icon: <Shield className="w-10 h-10 text-cyan-400" />, title: 'Kyberbezpečnost', text: 'Bezpečnost sítí, etický hacking a ochrana dat.' },
-{ icon: <Dumbbell className="w-10 h-10 text-green-400" />, title: 'Fitness a seberozvoj', text: 'Vyvážený rozvoj těla i mysli, disciplína a růst.' },
-{ icon: <Github className="w-10 h-10 text-indigo-400" />, title: 'Trading a IT projekty', text: 'Kombinace analytiky, disciplíny a technických dovedností.' },
-].map((card, i) => (
-<motion.div
-key={i}
-initial={{ opacity: 0, y: 40 }}
-whileInView={{ opacity: 1, y: 0 }}
-transition={{ duration: 0.6, delay: i * 0.2 }}
-className="bg-slate-900/60 p-8 rounded-2xl shadow-lg hover:shadow-xl hover:scale-[1.02] transition-all text-center"
->
-<div className="flex justify-center mb-4">{card.icon}</div>
-<h3 className="text-xl font-semibold mb-2">{card.title}</h3>
-<p className="text-slate-400">{card.text}</p>
-</motion.div>
-))}
-</div>
-</section>
-
-
-{/* Footer */}
-<footer className="text-center py-10 text-slate-500 text-sm">
-© {new Date().getFullYear()} Dan Eisner — All rights reserved.
-</footer>
-</div>
-);
-}
-
-
+    // small type-in lead
+    const lead = document.querySelector('.lead');
+    if(lead){
+      const text = lead.textContent;
+      lead.textContent = '';
+      let i = 0;
+      (function type(){ if(i<=text.length){ lead.textContent = text.slice(0,i++); setTimeout(type,8)} }());
+    }
+  </script>
+</body>
+</html>
